name:                ListT
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          m.farkasdyck@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
--extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Trans.List
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
                     , transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  ghc-options:         -Wall -Wno-name-shadowing
